bundle/manifests/numaresources-controller-manager-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: metrics-service-cert
  creationTimestamp: null
  labels:
    control-plane: controller-manager
  name: numaresources-controller-manager-metrics-service
spec:
  ports:
  - name: https
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    control-plane: controller-manager
status:
  loadBalancer: {}
