bundle/manifests/network-policy.deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operator-default-deny-all
spec:
  podSelector:
    matchLabels:
      app: numaresources-operator
  policyTypes:
    - Ingress
    - Egress
