bundle/manifests/network-policy.egress-to-api-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operator-egress-to-api-server
spec:
  podSelector:
    matchLabels:
      app: numaresources-operator 
  egress:
  - ports:
    - protocol: TCP
      port: 6443 
  policyTypes:
  - Egress
