bundle/manifests/numaresources-allow-webhook-traffic_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: numaresources-allow-webhook-traffic
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      app: numaresources-operator
  policyTypes:
  - Ingress
