bundle/manifests/numaresources-ingress-to-operator-metrics_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: numaresources-ingress-to-operator-metrics
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: numaresources-operator
  policyTypes:
  - Ingress
