bundle/manifests/numaresources-operator-default-deny-all_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: numaresources-operator-default-deny-all
spec:
  podSelector:
    matchLabels:
      app: numaresources-operator
  policyTypes:
  - Ingress
  - Egress
